--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "create-favicon": "convert public/favicon-16x16.png public/favicon-32x32.png public/favicon.ico"
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
